--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,48 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/chatback"
-    tools:context=".MainActivity">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/ll1"
-        android:gravity="center">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profileimgg"
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_80sdp"
-            android:src="@drawable/photocamera"
-            app:civ_border_color="@color/white"
-            android:layout_marginTop="@dimen/_7sdp"
-            app:civ_border_width="@dimen/_2sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.226" />
-
-        <TextView
-            android:id="@+id/recivername"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ayushvishwakarma"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:fontFamily="@font/poppins_regular"
-            android:textSize="@dimen/_15sdp"
-            android:layout_margin="@dimen/_10sdp"/>
-    </LinearLayout>
+    tools:context=".activity.ChatActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/msgadpter"
+        android:id="@+id/recyclerViewListMessage"
         android:layout_width="match_parent"
-        android:layout_height="502dp"
+        android:layout_height="match_parent"
         android:layout_above="@id/ll2"
-        android:layout_below="@+id/ll1"
-        android:layout_marginTop="7dp"
         android:layout_marginBottom="-7dp"
         android:padding="@dimen/_10sdp" />
 
@@ -71,12 +36,12 @@
             app:cardCornerRadius="@dimen/_25sdp">
 
             <EditText
-                android:id="@+id/textmsg"
+                android:inputType="text"
+                android:id="@+id/edtMessage"
                 android:layout_width="338dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="@dimen/_20sdp"
                 android:layout_gravity="center"
-                android:background="@null"
                 android:fontFamily="@font/poppins_regular"
                 android:hint="Type The Messages..."
                 android:paddingStart="13.00dp" />
@@ -93,6 +58,7 @@
             app:cardCornerRadius="@dimen/_25sdp">
 
             <ImageView
+                android:id="@+id/imgSendMessage"
                 android:layout_width="@dimen/_15sdp"
                 android:layout_height="@dimen/_15sdp"
                 android:layout_gravity="center"
