--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/mainback"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <LinearLayout
         android:id="@+id/toolBar"
@@ -24,6 +24,7 @@
         android:layout_marginRight="25dp">
 
         <TextView
+            android:id="@+id/txtFullName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -43,6 +44,15 @@
             android:layout_gravity="center"
             android:layout_marginRight="@dimen/_10sdp"
             android:background="@drawable/logout"
+            android:transitionName="loout_img" />
+
+        <ImageView
+            android:id="@+id/imgGroupAdd"
+            android:layout_width="@dimen/_26sdp"
+            android:layout_height="@dimen/_26sdp"
+            android:layout_gravity="center"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:background="@drawable/group_add"
             android:transitionName="loout_img" />
 
     </LinearLayout>
