--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/two"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profilerg0"
